--- a/src/App.css
+++ b/src/App.css
@@ -1,98 +1,48 @@
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+* {
   margin: 0;
-  background-color: #f0f0f0;
-  font-family: Arial, sans-serif;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.game-grid {
-  width: 50rem;
+.container {
+  background-color: #111;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.score {
+  text-transform: capitalize;
+  font-size: 20px;
+  color: white;
+}
+
+.board {
   display: grid;
-  grid-template-columns: repeat(15, 20px);
-  grid-template-rows: repeat(15, 20px);
-  gap: 2px;
-  margin: 20px auto;
-  border: 1px solid #000;
-  width: 300px;
-  overflow: hidden;
+  grid-template-columns: repeat(20, 20px);
+  grid-template-rows: repeat(20, 20px);
+  gap: 1px;
+  width: max-content;
 }
 
 .cell {
+  background-color: #fff;
   width: 20px;
   height: 20px;
-  background-color: #eee;
-}
-
-.snake {
-  background-color: #333;
 }
 
 .food {
   background-color: #16a085;
-  border-radius: 50%;
 }
 
-.start-modal {
-  width: 30rem;
-  height: 30rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 20px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+.snake{
+  background-color: #16a085;
 }
 
-.start-modal h2 {
-  margin-bottom: 20px;
-  color: #333;
-}
-
-.start-modal button {
-  padding: 10px 40px;
-  background-color: #2c3e50;
-  border: none;
-  color: white;
-  font-size: 16px;
-  cursor: pointer;
-  transition: .3s ease;
-}
-
-.start-modal button:hover {
-  background-color: #34495e;
-  letter-spacing: 2px;
-}
-
-.game-over {
-  text-align: center;
-  margin: 20px 0;
-  font-size: 2rem;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color: red;
-  font-weight: bolder;
-  display: flex;
-  flex-direction: column;
-}
-
-.game-over button {
-  padding: 10px 20px;
-  background-color: #f44336;
-  border: none;
-  color: white;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.game-over button:hover {
-  background-color: #d32f2f;
-}
-
-h2{
-  text-align: center;
+.snakeHead {
+  background-color: tomato;
 }
